Add testing script + Makefile rule for running all tests

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,9 @@
-.PHONY: all clean
+.PHONY: all clean test
 
 all: toplevel.native
+
+test: toplevel.native testlexerparser.py
+	python3 testlexerparser.py all
 
 toplevel.native: toplevel.ml parser.mly scanner.mll ast.ml
 	ocamlbuild $@
