Add unit tests for FUNDEFs and DEFINE

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@
 all: toplevel.native
 
 test: toplevel.native testlexerparser.py
-	python3 testlexerparser.py all
+	@python3 testlexerparser.py all
 
 toplevel.native: toplevel.ml parser.mly scanner.mll ast.ml
 	ocamlbuild $@
