--- a/spool-syntax/package.json
+++ b/spool-syntax/package.json
@@ -3,8 +3,9 @@
   "displayName": "sPool-syntax",
   "description": "Syntax highlighter for the sPool programming language",
   "version": "0.0.1",
+  "publisher": "AnkurDahal",
   "engines": {
-    "vscode": "^1.75.0"
+    "vscode": "^1.71.0"
   },
   "categories": [
     "Programming Languages"
