Add skeleton code for semantic analysis

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,7 @@ testparser: $(EXEC) runtests.py
 testsemant: $(EXEC) runtests.py
 	@python3 runtests.py semant all
 
-$(EXEC): toplevel.ml parser.mly scanner.mll ast.ml semant.ml
+$(EXEC): toplevel.ml parser.mly scanner.mll ast.ml semant.ml sast.ml
 	ocamlbuild $@
 
 clean:
