--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,5 @@
+# Compiles the sPool compiler and runs tests 
+
 EXEC := toplevel.native
 
 .PHONY: all clean testparser
@@ -8,8 +10,8 @@ testparser: $(EXEC) runtests.py
 	@python3 runtests.py lexerparser all
 
 # TODO: test semant has currently no tests; add tests as we write semantic checker for sPool
-testsemant: $(EXEC) runtests.py
-	@python3 runtests.py semant all
+# testsemant: $(EXEC) runtests.py
+# 	@python3 runtests.py semant all
 
 $(EXEC): toplevel.ml parser.mly scanner.mll ast.ml semant.ml sast.ml codegen.ml
 	ocamlbuild $@ -package llvm -package llvm.analysis
