Handle lambda and call in semant; add ALPHA type to handle polymorphism on lists

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,7 @@ testparser: $(EXEC) runtests.py
 # 	@python3 runtests.py semant all
 
 $(EXEC): toplevel.ml parser.mly scanner.mll ast.ml semant.ml sast.ml codegen.ml
-	ocamlbuild $@ -package llvm -package llvm.analysis
+	@ocamlbuild $@ -package llvm -package llvm.analysis
 
 clean:
-	ocamlbuild -clean
+	@ocamlbuild -clean
