Automatically build builtins.o on make

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,11 @@
 # Compiles the sPool compiler and runs tests 
 
 EXEC := toplevel.native
+CXX  := gcc
 
 .PHONY: all clean testparser
 
-all: $(EXEC)
+all: $(EXEC) builtins.o
 
 testparser: $(EXEC) runtests.py
 	@python3 runtests.py lexerparser all
@@ -13,8 +14,12 @@ testparser: $(EXEC) runtests.py
 # testsemant: $(EXEC) runtests.py
 # 	@python3 runtests.py semant all
 
+builtins.o: builtins.c
+	@$(CXX) -c $^
+
 $(EXEC): toplevel.ml parser.mly scanner.mll ast.ml semant.ml sast.ml codegen.ml
 	@ocamlbuild $@ -package llvm -package llvm.analysis
 
 clean:
 	@ocamlbuild -clean
+	@rm -f *.o *.s
