Start fdef; building fun body not implemented yet

--- a/src/Makefile
+++ b/src/Makefile
@@ -19,6 +19,11 @@ testcodegen: $(EXEC) runtests.py
 $(EXEC): toplevel.ml parser.mly scanner.mll ast.ml semant.ml sast.ml codegen.ml
 	@ocamlbuild $@ -package llvm -package llvm.analysis
 
+# microc.native : parser.mly scanner.mll codegen.ml semant.ml microc.ml
+# 	opam exec -- \
+# 	ocamlbuild -use-ocamlfind microc.native
+
+# TODO: change it to the one microc uses
 clean:
 	@ocamlbuild -clean
 	@rm -f *.o *.s *.ll
