Rewrite List_replace

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,8 +13,12 @@ testparser: $(EXEC) runtests.py
 testcodegen: $(EXEC) runtests.py
 	@python3 runtests.py codegen all _
 
-%.o: %.c
+# github CI/CD does not like %.o: %.c
+builtins.o: builtins.c
 	@$(CXX) -O2 -c -pthread $^
+
+list.o: list.c
+	@$(CXX) -O2 -c $^
 
 $(EXEC): toplevel.ml parser.mly scanner.mll ast.ml semant.ml sast.ml codegen.ml
 	@ocamlbuild $@ -package llvm -package llvm.analysis -cflags -w,+a-4-70-42
